--- a/kmaooad-functions/pom.xml
+++ b/kmaooad-functions/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.19</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.1.10.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
