Fix Mongo error

--- a/kmaooad-functions/src/main/resources/application.properties
+++ b/kmaooad-functions/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.uri=mongodb+srv://admin:0FuzYyhgLsJU6nS9@cluster0.1tup9.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=test
 spring.data.mongodb.collection=requests
