Tested Email Notification Service

--- a/kmaooad-functions/src/main/resources/application.properties
+++ b/kmaooad-functions/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.data.mongodb.uri=mongodb+srv://admin:0FuzYyhgLsJU6nS9@cluster0.1tup9.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=test
 spring.data.mongodb.collection=requests
+
+#Mail properties
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=testmailooad@gmail.com
+spring.mail.password=wlqdqwkbbwbjzvwf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
