Added scheduled update sending & bot

--- a/kmaooad-functions/src/main/resources/application.properties
+++ b/kmaooad-functions/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.mail.username=testmailooad@gmail.com
 spring.mail.password=wlqdqwkbbwbjzvwf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Bot properties
+bot.webhook="https://kmaooad-kmavun.azurewebsites.net/api/TelegramWebhook?code=bWxMuFHyNQUHJ3S49m4K9f3JbgLqwN0GsYRCykf0ctd7AzFuB3Gf4A=="
+bot.username=@kmaooad_kmavun_bot
+bot.token=5767565920:AAE_imYWKAjcJ1fT6xJi2ESfrRO2lI9MqDU
