--- a/kmaooad-functions/pom.xml
+++ b/kmaooad-functions/pom.xml
@@ -94,6 +94,11 @@
             <version>2.9.1</version>
         </dependency>
         <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-spring-boot-starter</artifactId>
+            <version>6.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
